[package]
name = "callm-demos"
description = "Examples and tools to help you get started with callm"
version = "0.2.0"
edition = "2021"
authors = ["MistApproach"]
license = "MIT"
repository = "https://github.com/MistApproach/callm-demos"

[dependencies]
callm = { git = "https://github.com/MistApproach/callm", branch = "devel" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
